# Constella

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  pyproject.toml
docs/: CLOUD_TUNNEL.md  DESIGN.md  HISTORY.md  OPERATIONS.md  frontend-redesign-zh.md  nodes.example.yaml  plan_data_analysis.md  plan_data_analysis_stage2.md  plan_highres_job_curves.md  plan_remove_agent_history_payload.md  plan_stage2.1.md  plan_stage2.2.md  plan_stage2.md  rust-backend-rewrite-plan.md
docs/assets/: README.md  asset-manifest.json  demo-data-summary.json  review-report.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  analytics.ts  cluster-utils.ts  components.tsx  format.ts  main.ts  main.tsx  styles.css  types.ts
scripts/: README.md  bench_probe.sh  start.sh  status.sh  stop.sh
scripts/cluster/: start.sh  status.sh  stop.sh
scripts/dev/: bench_probe.sh
scripts/maintenance/: db.sh
scripts/service/: setup.sh  start.sh  status.sh  stop.sh
scripts/tunnel/: start.sh  status.sh  stop.sh
src/: agent.rs  analytics.rs  api.rs  cluster.rs  cluster_config.rs  cluster_control.rs  collector.rs  db.rs  highres.rs  lib.rs  main.rs  nvidia_smi.rs  nvml.rs  procfs.rs  schema.rs  settings.rs
src/constella/: agent.py  agent_main.py  analytics.py  app.py  cli.py  cluster.py  collector.py  (+8 more)
tests/: rust_agent.rs  rust_analytics.rs  rust_api_contract.rs  rust_cluster_config.rs  rust_cluster_control.rs  rust_collector.rs  rust_db.rs  rust_highres.rs  rust_nvidia_smi.rs  rust_nvml.rs  rust_schema_cluster.rs  test_agent.py  test_analytics.py  test_app_cluster.py  test_app_settings.py  test_cli.py  test_cluster.py  test_cluster_control.py  test_collector.py  test_db.py  test_highres.py  test_nvidia_smi.py  test_procfs.py  test_schema.py  test_service_scripts.py
(+2 files in other folders)
