[package]
name = "constella"
version = "0.2.0"
edition = "2021"
description = "Lightweight realtime NVIDIA GPU cluster monitoring web service."
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.10"
